--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        body {
+       body {
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #f4f4f4;
@@ -20,6 +20,7 @@
     position: fixed;
     height: 100%;
     padding-top: 20px;
+    transition: all 0.3s ease;
 }
 
 .sidebar h2 {
@@ -54,6 +55,7 @@
 .main-content {
     margin-left: 250px;
     padding: 20px;
+    transition: margin-left 0.3s ease;
 }
 
 .header {
@@ -84,7 +86,7 @@
     font-size: 12px;
     padding: 2px 6px;
     border-radius: 50%;
-    display: none; /* Hidden by default */
+    display: none;
 }
 
 #notificationsContainer {
@@ -114,6 +116,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -123,6 +126,7 @@
     padding: 20px;
     text-align: center;
     width: 30%;
+    margin-bottom: 20px;
 }
 
 .card i {
@@ -169,7 +173,70 @@ tr:hover {
     background-color: #f1f1f1;
 }
 
-    </style>
+/* Mobile Styles */
+@media (max-width: 768px) {
+    .sidebar {
+        width: 200px;
+        padding-top: 10px;
+    }
+
+    .main-content {
+        margin-left: 0;
+        padding: 10px;
+    }
+
+    .header {
+        padding: 10px;
+    }
+
+    .cards {
+        display: block; /* Stack cards vertically */
+    }
+
+    .card {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    table th, table td {
+        padding: 10px; /* Reduce padding for small screens */
+    }
+}
+
+@media (max-width: 480px) {
+    .sidebar {
+        width: 0; /* Hide sidebar on mobile */
+        overflow-x: hidden; /* Prevent scrolling */
+    }
+
+    .main-content {
+        margin-left: 0;
+        padding: 5px;
+    }
+
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .notification {
+        font-size: 20px;
+    }
+
+    .cards {
+        display: block;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    table th, table td {
+        font-size: 12px;
+    }
+}
+
 </head>
 
 <body>
