--- a/index.html
+++ b/index.html
@@ -1,162 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Penta Construction Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penta Construction Login</title>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background: url('Photos/0268da23-3cd8-4e19-bb47-0f12210a56f4.jpg') no-repeat center center fixed;
-            background-size: cover;
-        }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      background: url('Photos/0268da23-3cd8-4e19-bb47-0f12210a56f4.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
 
-        .login-container {
-            background: rgba(8, 0, 0, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 100%;
-            max-width: 400px;
-        }
+    .login-container {
+      background: rgba(8, 0, 0, 0.8);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      width: 300px;
+    }
 
-        input[type="text"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
+    .login {
+      display: block;
+      margin: 0 auto 20px;
+      width: 150px;
+    }
 
-        .password-container {
-            position: relative;
-        }
+    input[type="text"], input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      box-sizing: border-box;
+    }
 
-        .password-container input {
-            padding-right: 40px;
-        }
+    .password-container {
+      position: relative;
+    }
 
-        .toggle-password {
-            position: absolute;
-            top: 50%;
-            right: 10px;
-            transform: translateY(-50%);
-            cursor: pointer;
-            font-size: 1.2em;
-            color: #ccc;
-        }
+    .password-container input {
+      padding-right: 40px;
+    }
 
-        .warning {
-            color: red;
-            margin-top: 10px;
-            display: none;
-        }
+    .toggle-password {
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 1.2em;
+      color: #ccc;
+    }
 
-        button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            font-size: 1em;
-            cursor: pointer;
-        }
+    .warning {
+      color: red;
+      margin-top: 10px;
+      display: none;
+    }
 
-        button:hover {
-            background-color: #0056b3;
-        }
+    button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      font-size: 1em;
+      cursor: pointer;
+    }
 
-        .penta {
-            color: white;
-        }
-    </style>
+    button:hover {
+      background-color: #0056b3;
+    }
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js"></script>
+    .penta {
+      color: white;
+    }
+  </style>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+  <script>
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDxQ9ai-C2RlJy27p_kdHkKXeqz1Cpbyh4",
+      authDomain: "project-app-58ff6.firebaseapp.com",
+      databaseURL: "https://project-app-58ff6-default-rtdb.firebaseio.com",
+      projectId: "project-app-58ff6",
+      storageBucket: "project-app-58ff6.firebasestorage.app",
+      messagingSenderId: "586923989952",
+      appId: "1:586923989952:web:72b300dbc00d830e2e4625",
+      measurementId: "G-HV80KTBWSR"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    // Function to login and save data to Firebase
+    function login() {
+      const username = document.getElementById("username").value.trim().toLowerCase();
+      const password = document.getElementById("password").value;
+
+      const validUsers = [
+        { username: "faiyaz mulla", password: "PENTACON" },
+        { username: "christopher chishela", password: "PENTACON" }
+      ];
+
+      const isValid = validUsers.some(user => user.username === username && user.password === password);
+
+      const warningMessage = document.getElementById("warningMessage");
+
+      if (isValid) {
+        // Save login attempt data to Firebase
+        const loginRef = database.ref('loginAttempts');
+        loginRef.push({
+          username: username,
+          timestamp: new Date().toISOString()
+        });
+
+        window.location.href = 'dashboard.html';
+      } else {
+        warningMessage.style.display = "block"; // Show warning message
+      }
+    }
+
+    // Function to toggle password visibility
+    function togglePasswordVisibility() {
+      const passwordField = document.getElementById("password");
+      const toggleIcon = document.getElementById("togglePasswordIcon");
+
+      if (passwordField.type === "password") {
+        passwordField.type = "text";
+        toggleIcon.textContent = "🙈"; // Change to "hide" icon
+      } else {
+        passwordField.type = "password";
+        toggleIcon.textContent = "👁️"; // Change to "show" icon
+      }
+    }
+  </script>
+
 </head>
 
 <body>
 
-    <div class="login-container">
-        <img class="login" src="Photos/logo.png" alt="Penta Construction Logo">
-        <p class="penta">PENTA CONSTRUCTION</p>
-        <input type="text" id="email" placeholder="Email">
-        <div class="password-container">
-            <input type="password" id="password" placeholder="Password">
-            <span class="toggle-password" id="togglePasswordIcon" onclick="togglePasswordVisibility()">👁️</span>
-        </div>
-        <p class="warning" id="warningMessage">Invalid email or password. Please try again.</p>
-        <button onclick="login()">Login</button>
+  <div class="login-container">
+    <img class="login" src="Photos/logo.png" alt="Penta Construction Logo">
+    <p class="penta">PENTA CONSTRUCTION</p>
+    <input type="text" id="username" placeholder="User Name">
+    <div class="password-container">
+      <input type="password" id="password" placeholder="Password">
+      <span class="toggle-password" id="togglePasswordIcon" onclick="togglePasswordVisibility()"></span>
     </div>
-
-    <script>
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyDxQ9ai-C2RlJy27p_kdHkXeqz1Cpbyh4",
-            authDomain: "project-app-58ff6.firebaseapp.com",
-            projectId: "project-app-58ff6",
-            storageBucket: "project-app-58ff6.firebasestorage.app",
-            messagingSenderId: "586923989952",
-            appId: "1:586923989952:web:72b300dbc00d830e2e4625",
-            measurementId: "G-HV80KTBWSR"
-        };
-
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const analytics = firebase.analytics();
-        const auth = firebase.auth();
-
-        // Login function
-        function login() {
-            const email = document.getElementById("email").value.trim();
-            const password = document.getElementById("password").value;
-
-            auth.signInWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    // Login successful, redirect to dashboard
-                    window.location.href = 'dashboard.html';
-                })
-                .catch((error) => {
-                    // Show error message
-                    const warningMessage = document.getElementById("warningMessage");
-                    warningMessage.style.display = "block";
-                    warningMessage.textContent = "Invalid email or password. Please try again.";
-                    console.error("Error during login:", error.message);
-                });
-        }
-
-        // Toggle password visibility
-        function togglePasswordVisibility() {
-            const passwordField = document.getElementById("password");
-            const toggleIcon = document.getElementById("togglePasswordIcon");
-
-            if (passwordField.type === "password") {
-                passwordField.type = "text";
-                toggleIcon.textContent = "🙈"; // Change to "hide" icon
-            } else {
-                passwordField.type = "password";
-                toggleIcon.textContent = "👁️"; // Change to "show" icon
-            }
-        }
-    </script>
+    <p class="warning" id="warningMessage">Invalid username or password. Please try again.</p>
+    <button onclick="login()">Login</button>
+  </div>
 
 </body>
-
 </html>
