--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <!-- Add Firebase SDKs -->
+  <!-- Add Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js"></script>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Penta Construction Login</title>
@@ -94,10 +95,11 @@
 
   <!-- Firebase SDK -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+    // Initialize Firebase
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
 
-    // Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyDxQ9ai-C2RlJy27p_kdHkKXeqz1Cpbyh4",
       authDomain: "project-app-58ff6.firebaseapp.com",
@@ -109,9 +111,9 @@
       measurementId: "G-HV80KTBWSR"
     };
 
-    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
+    const analytics = getAnalytics(app);
 
     // Function to handle login
     async function login() {
@@ -162,46 +164,6 @@
     window.login = login;
     window.togglePasswordVisibility = togglePasswordVisibility;
   </script>
-  <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js"></script>
-
-<script>
-  // Initialize Firebase with configuration and logic
-  const firebaseConfig = {
-    apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7Eg6VqWwPje0",
-    authDomain: "project-management-a1c5e.firebaseapp.com",
-    projectId: "project-management-a1c5e",
-    storageBucket: "project-management-a1c5e.firebasestorage.app",
-    messagingSenderId: "662718236281",
-    appId: "1:662718236281:web:e859b39671aefa67e436a8",
-    measurementId: "G-SMQBEE0S7G"
-  };
-
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
-
-  // Function to write data
-  function writeTaskData(taskId, taskName, taskDetails) {
-    firebase.database().ref('tasks/' + taskId).set({
-      taskName: taskName,
-      taskDetails: taskDetails
-    });
-  }
-
-  // Function to read data
-  function getTaskData(taskId) {
-    firebase.database().ref('tasks/' + taskId).once('value').then((snapshot) => {
-      if (snapshot.exists()) {
-        console.log(snapshot.val());
-      } else {
-        console.log("No data available");
-      }
-    });
-  }
-</script>
-
-
 </head>
 
 <body>
