--- a/purchases.html
+++ b/purchases.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -141,13 +141,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Purchases </h1>
+        <h1>Purchases</h1>
 
         <!-- Row of buttons -->
         <div class="button-row">
             <li><a href="Projectcosting.html"><i class="fas fa-sign-out-alt"></i><button id="projectCostingBtn">Project Costing</button> </a></li>
-
-            
             <button id="toggleFormBtn">Add New Entry</button>
             <button id="archiveBtn">Archive Monthly Purchases</button> <!-- Archive button -->
         </div>
@@ -252,179 +250,159 @@
             <button id="archiveMonthBtn">Archive</button>
         </div>
     </div>
-<!-- Include jsPDF Library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-<!-- Include jsPDF Library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<SCript>document.getElementById("projectCostingBtn").addEventListener("click", function () {
-    // Redirect to the desired page
-    window.location.href = "project_costing.html"; // Change the URL to your target page
-});
-</SCript>
+    <!-- Include jsPDF Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-<script>
-    const { jsPDF } = window.jspdf;
-    const form = document.getElementById('costingForm');
-    const toggleFormBtn = document.getElementById('toggleFormBtn');
-    const projectCostingBtn = document.getElementById('projectCostingBtn');
-    const archiveBtn = document.getElementById('archiveBtn'); // Archive button reference
-    const totalPurchasesDisplay = document.getElementById('totalPurchases');
-    const taskSelect = document.getElementById('taskSelect');
-    const taskSpending = document.getElementById('taskSpending');
-    const monthModal = document.getElementById('monthModal');
-    const closeModal = document.getElementsByClassName('close')[0];
-    const archiveMonthSelect = document.getElementById('archiveMonth');
-    const archiveYearInput = document.getElementById('archiveYear');
-    const archiveMonthBtn = document.getElementById('archiveMonthBtn');
-    let totalPurchases = 0;
-    let taskTotals = {}; // Object to store totals per task
+    <script>
+        const { jsPDF } = window.jspdf;
+        const form = document.getElementById('costingForm');
+        const toggleFormBtn = document.getElementById('toggleFormBtn');
+        const archiveBtn = document.getElementById('archiveBtn');
+        const totalPurchasesDisplay = document.getElementById('totalPurchases');
+        const taskSelect = document.getElementById('taskSelect');
+        const taskSpending = document.getElementById('taskSpending');
+        const monthModal = document.getElementById('monthModal');
+        const closeModal = document.getElementsByClassName('close')[0];
+        const archiveMonthSelect = document.getElementById('archiveMonth');
+        const archiveYearInput = document.getElementById('archiveYear');
+        const archiveMonthBtn = document.getElementById('archiveMonthBtn');
+        let totalPurchases = 0;
+        let taskTotals = {}; // Object to store totals per task
 
-    // Toggle form visibility
-    toggleFormBtn.addEventListener('click', () => {
-        if (form.style.display === 'none' || form.style.display === '') {
-            form.style.display = 'block';
-            toggleFormBtn.textContent = 'Hide Form';
-        } else {
-            form.style.display = 'none';
-            toggleFormBtn.textContent = 'Add New Entry';
-        }
-    });
-
-    // Handle "Project Costing" button
-    projectCostingBtn.addEventListener('click', () => {
-        alert('This button is linked to Project Costing functionality!');
-    });
-
-    // Handle "Archive Monthly Purchases" button click
-    archiveBtn.addEventListener('click', () => {
-        monthModal.style.display = "block"; // Show modal to select month
-    });
-
-    // Close modal
-    closeModal.addEventListener('click', () => {
-        monthModal.style.display = "none"; // Close modal
-    });
-
-    // Archive month selection and generate PDF
-    archiveMonthBtn.addEventListener('click', () => {
-        const selectedMonth = archiveMonthSelect.value;
-        const selectedYear = archiveYearInput.value;
-        if (selectedMonth && selectedYear) {
-            const doc = new jsPDF('landscape', 'mm', 'a4'); // Use 'mm' and 'a4' for better scaling
-
-            // Set margins to ensure content fits on the page
-            const margin = 10;
-            doc.setPage(1);
-            doc.setFontSize(18);
-            doc.text(`Monthly Purchases for ${selectedMonth}${selectedYear}`, margin, 20);
-
-            // Table headers with adjusted positions
-            const headerY = 30;
-            doc.setFontSize(10);
-            doc.text('DATE', margin + 0, headerY);
-            doc.text('PROJECT NAME', margin + 30, headerY);
-            doc.text('PARTICULAR', margin + 60, headerY);
-            doc.text('TASK', margin + 90, headerY);
-            doc.text('SUPPLIER', margin + 120, headerY);
-            doc.text('VAT', margin + 160, headerY);
-            doc.text('PAYEE', margin + 180, headerY);
-            doc.text('QTY', margin + 210, headerY);
-            doc.text('AMOUNT', margin + 230, headerY);
-            doc.text('TOTAL', margin + 250, headerY);
-
-            // Table rows
-            const tableBody = document.getElementById('costingTableBody');
-            let y = headerY + 10; // Adjusted Y position for rows
-
-            [...tableBody.rows].forEach(row => {
-                let cells = row.cells;
-                doc.text(cells[0].textContent, margin + 0, y);
-                doc.text(cells[1].textContent, margin + 30, y);
-                doc.text(cells[2].textContent, margin + 60, y);
-                doc.text(cells[3].textContent, margin + 90, y);
-                doc.text(cells[4].textContent, margin + 120, y);
-                doc.text(cells[5].textContent, margin + 160, y);
-                doc.text(cells[6].textContent, margin + 180, y);
-                doc.text(cells[7].textContent, margin + 210, y);
-                doc.text(cells[8].textContent, margin + 230, y);
-                doc.text(cells[9].textContent, margin + 250, y);
-                y += 8; // Space between rows
-            });
-
-            // Save the PDF
-            doc.save(`Purchases_${selectedMonth}${selectedYear}.pdf`);
-
-            monthModal.style.display = "none"; // Close modal
-            alert(`Purchases for ${selectedMonth} ${selectedYear} have been archived as PDF!`);
-        } else {
-            alert('Please select a month and enter a valid year.');
-        }
-    });
-
-    // Add entry to table when "Add Entry" is clicked
-    document.getElementById('addRowBtn').addEventListener('click', function () {
-        const date = document.getElementById('date').value;
-        const particular = document.getElementById('particular').value;
-        const task = document.getElementById('task').value;
-        const supplier = document.getElementById('supplier').value;
-        const vat = document.getElementById('vat').value;
-        const project = document.getElementById('project').value;
-        const payee = document.getElementById('payee').value;
-        const qty = document.getElementById('qty').value;
-        const amount = document.getElementById('amount').value;
-
-        if (date && particular && task && supplier && project && payee && qty && amount) {
-            const total = (parseFloat(qty) * parseFloat(amount)).toFixed(2);
-            const tableBody = document.getElementById('costingTableBody');
-
-            // Add new row to the table
-            const newRow = tableBody.insertRow();
-            newRow.innerHTML = `
-                <td>${date}</td>
-                <td>${project}</td>
-                <td>${particular}</td>
-                <td>${task}</td>
-                <td>${supplier}</td>
-                <td>${vat}</td>
-                <td>${payee}</td>
-                <td>${qty}</td>
-                <td>${amount}</td>
-                <td>${total}</td>
-            `;
-
-            // Update total purchases
-            totalPurchases += parseFloat(total);
-            totalPurchasesDisplay.textContent = `ZMW ${totalPurchases.toFixed(2)}`;
-
-            // Add task to taskSelect dropdown if it's a new task
-            if (!taskTotals[task]) {
-                taskTotals[task] = 0;
-                const option = document.createElement('option');
-                option.value = task;
-                option.textContent = task;
-                taskSelect.appendChild(option);
+        // Toggle form visibility
+        toggleFormBtn.addEventListener('click', () => {
+            if (form.style.display === 'none' || form.style.display === '') {
+                form.style.display = 'block';
+                toggleFormBtn.textContent = 'Hide Form';
+            } else {
+                form.style.display = 'none';
+                toggleFormBtn.textContent = 'Add New Entry';
             }
+        });
 
-            // Update task-specific total
-            taskTotals[task] += parseFloat(total);
-            taskSelect.addEventListener('change', function () {
-                const selectedTask = taskSelect.value;
-                if (selectedTask) {
-                    taskSpending.textContent = `Total for ${selectedTask}: ZMW ${taskTotals[selectedTask].toFixed(2)}`;
-                } else {
-                    taskSpending.textContent = '';
-                }
-            });
+        // Handle "Archive Monthly Purchases" button click
+        archiveBtn.addEventListener('click', () => {
+            monthModal.style.display = "block"; // Show modal to select month
+        });
 
-            // Clear form fields after adding
-            form.reset();
-        } else {
-            alert('Please fill in all fields');
-        }
-    });
-</script>
+        // Close modal
+        closeModal.addEventListener('click', () => {
+            monthModal.style.display = "none"; // Close modal
+        });
 
+        // Archive month selection and generate PDF
+        archiveMonthBtn.addEventListener('click', () => {
+            const selectedMonth = archiveMonthSelect.value;
+            const selectedYear = archiveYearInput.value;
+            if (selectedMonth && selectedYear) {
+                const doc = new jsPDF('landscape', 'mm', 'a4'); // Use 'mm' and 'a4' for better scaling
 
+                // Set margins to ensure content fits on the page
+                const margin = 10;
+                doc.setPage(1);
+                doc.setFontSize(18);
+                doc.text(`Monthly Purchases for ${selectedMonth}${selectedYear}`, margin, 20);
+
+                // Table headers with adjusted positions
+                const headerY = 30;
+                doc.setFontSize(10);
+                doc.text('DATE', margin + 0, headerY);
+                doc.text('PROJECT NAME', margin + 30, headerY);
+                doc.text('PARTICULAR', margin + 60, headerY);
+                doc.text('TASK', margin + 90, headerY);
+                doc.text('SUPPLIER', margin + 120, headerY);
+                doc.text('VAT', margin + 160, headerY);
+                doc.text('PAYEE', margin + 180, headerY);
+                doc.text('QTY', margin + 220, headerY);
+                doc.text('AMOUNT', margin + 240, headerY);
+                doc.text('TOTAL', margin + 270, headerY);
+
+                // Add table rows
+                let yOffset = 40;
+                const tableRows = document.querySelectorAll('#costingTableBody tr');
+                tableRows.forEach(row => {
+                    const cells = row.querySelectorAll('td');
+                    doc.text(cells[0].textContent, margin + 0, yOffset);
+                    doc.text(cells[1].textContent, margin + 30, yOffset);
+                    doc.text(cells[2].textContent, margin + 60, yOffset);
+                    doc.text(cells[3].textContent, margin + 90, yOffset);
+                    doc.text(cells[4].textContent, margin + 120, yOffset);
+                    doc.text(cells[5].textContent, margin + 160, yOffset);
+                    doc.text(cells[6].textContent, margin + 180, yOffset);
+                    doc.text(cells[7].textContent, margin + 220, yOffset);
+                    doc.text(cells[8].textContent, margin + 240, yOffset);
+                    doc.text(cells[9].textContent, margin + 270, yOffset);
+                    yOffset += 10;
+                });
+
+                // Save PDF
+                doc.save(`Purchases_${selectedMonth}_${selectedYear}.pdf`);
+
+                // Close modal
+                monthModal.style.display = "none";
+            } else {
+                alert('Please select a valid month and year');
+            }
+        });
+
+        // Function to add a row to the table
+        document.getElementById('addRowBtn').addEventListener('click', () => {
+            const date = document.getElementById('date').value;
+            const particular = document.getElementById('particular').value;
+            const task = document.getElementById('task').value;
+            const supplier = document.getElementById('supplier').value;
+            const vat = document.getElementById('vat').value;
+            const project = document.getElementById('project').value;
+            const payee = document.getElementById('payee').value;
+            const qty = parseFloat(document.getElementById('qty').value);
+            const amount = parseFloat(document.getElementById('amount').value);
+            const total = qty * amount;
+
+            if (date && particular && task && supplier && vat && project && payee && qty && amount) {
+                // Add row to table
+                const tableBody = document.getElementById('costingTableBody');
+                const row = tableBody.insertRow();
+
+                row.insertCell(0).textContent = date;
+                row.insertCell(1).textContent = project;
+                row.insertCell(2).textContent = particular;
+                row.insertCell(3).textContent = task;
+                row.insertCell(4).textContent = supplier;
+                row.insertCell(5).textContent = vat;
+                row.insertCell(6).textContent = payee;
+                row.insertCell(7).textContent = qty;
+                row.insertCell(8).textContent = amount;
+                row.insertCell(9).textContent = total.toFixed(2);
+
+                // Update task totals
+                if (!taskTotals[task]) taskTotals[task] = 0;
+                taskTotals[task] += total;
+
+                // Update task select dropdown
+                let option = new Option(task, task);
+                taskSelect.appendChild(option);
+
+                // Update total purchases
+                totalPurchases += total;
+                totalPurchasesDisplay.textContent = `ZMW ${totalPurchases.toFixed(2)}`;
+
+                // Clear the form inputs
+                form.reset();
+            } else {
+                alert('Please fill in all the fields.');
+            }
+        });
+
+        // Display task-specific spending total
+        taskSelect.addEventListener('change', () => {
+            const selectedTask = taskSelect.value;
+            if (selectedTask && taskTotals[selectedTask]) {
+                taskSpending.textContent = `Total Spending on Task "${selectedTask}": ZMW ${taskTotals[selectedTask].toFixed(2)}`;
+            } else {
+                taskSpending.textContent = '';
+            }
+        });
+    </script>
 </body>
 </html>
